
@startuml

package user {

  abstract class Client {
    -String nom
  	-String adresse
  	-String telephone
  	-String email
  	+Client(String nomV, String adresseV, String telephoneV, String emailV)
  	+void ajouterEnvie(String typeV, Double prixV, String localisationV, Double surfaceSolV, int nbPiecesV)
  }

  class Personne {
    +Personne(String nomV, String adresseV, String telephoneV, String emailV)
  }

  class Entreprise {
    -String formeJuridique
  	-String numSiren
  	+Entreprise(String nomV, String adresseV, String telephoneV, String emailV, String formeJurisiqueV, String numSirenV)
  }

  Personne -up-|> Client
  Entreprise -up-|> Client

  class Envie {
    -String type
  	-Double prix
  	-String localisation
  	-Double surfaceSol
  	-int nbPieces
  	+Envie(String typeV, Double prixV, String localisationV, Double surfaceSolV, int nbPiecesV)
  }

  Client *--"*" Envie : "listeEnvie"

}

package agence {

  class Agence {
    -String nom
  	-HashMap<Date,Client> listeRdv
  	+Agence(String nomV)
  	+void creerPersonne(String nomV, String adresseV, String telephoneV, String emailV)
  	+void creerEntreprise(String nomV, String adresseV, String telephoneV, String emailV, String formeJuridiqueV, String numSirenV)
  	+void creerTerrain(int numV, String adresseV, String orientationV, Double prixV, Date venteV, Double surfaceSolV, Double longueurFacadeV)
  	+void creerMaison(int numV, String adresseV, String orientationV, Double prixV, Date venteV, Double surfaceHabitableV, int nbPiecesV, int nbEtagesV, String chauffageV)
  	+void creerAppartement(int numV, String adresseV, String orientationV, Double prixV, Date venteV, int nbPiecesV, int etageV, Double chargesMensuellesV)
  	+void creerMandat(Double prixV, Date venteV, Date debutV, Date finV, BienImmo bienV, Client vendeurV)
  	+void creerPromesse(Double prixVerseVendeurV, Date venteV, Double commissionAgenceV, Double fraisVenteV, BienImmo bienV, Client acheteurV, Notaire notaireV)
  	+void creerNotaire(String nomV, String adresseV)
  	+String voirStats()
  	+void creerDocument()
  	+void addRdv(Date date, Client client)
  }

  Client "*"-left-* Agence : "listeClient"

  class Mandat {
    -Double prix
  	-Date vente
  	-Date debut
  	-Date fin
  	-BienImmo bien
  	-Client vendeur
  	-HashMap<Date,Client> listeRdvVisite
  	-HashMap<Date,Client> listeRdvVendeur
  	+Mandat(Double prixV, Date venteV, Date debutV, Date finV, BienImmo bienV, Client vendeurV)
  	+void addRdvVisite(Date date, Client client)
  	+void addRdvVendeur(Date date, Client client)
  }

  class Promesse {
    -Double prixVerseVendeur
  	-Date vente
  	-Double commissionAgence
  	-Double fraisVente
  	-BienImmo bien
  	-Client acheteur
  	-Notaire notaire
  	-boolean etatFinit
  	+Promesse(Double prixVerseVendeurV, Date venteV, Double commissionAgenceV, Double fraisVenteV, BienImmo bienV, Client acheteurV, Notaire notaireV)
  	+void signerPromesse()
  }

  Agence *--"*" Mandat : "listeMandat"
  Agence *--"*" Promesse : "listePromesse"

  Mandat -->"1" Client : "vendeur"
  Promesse -->"1" Client : "acheteur"

  class Notaire {
    -String nom
  	-String adresse
  	+Notaire(String nomV, String adresseV)
  	+void verserArgent()
  }

  Agence *--"*" Notaire : "listeNotaire"

  Notaire "1"<-- Promesse : "notaire"

}

package pub {

  class AnnoncePub {
    +AnnoncePub()
    +void ajouterPub(TypePub typePub)
  }

  AnnoncePub "*"--* Agence : "listeAnnonce"
  TypePub "*"--* AnnoncePub : "listePub"

  abstract class TypePub {
    +String getElem()
  }

  class TypeTexte {
    -String texte
  	+TypeTexte(String texteV)
  	+String getElem()
  }

  class TypeHtml {
    -String html
  	+TypeHtml(String htmlV)
  	+String getElem()
  }

  class TypeImg {
    -String img
  	+TypeImg(String imgV)
  	+String getElem()
  }

  class TypeVid {
  	-String vid
  	+TypeVid(String vidV)
  	+String getElem()
  }

  TypeTexte -up-|> TypePub
  TypeHtml -up-|> TypePub
  TypeImg -up-|> TypePub
  TypeVid -up-|> TypePub

}

package immo {

  abstract class BienImmo {
  	-int num
  	-String adresse
  	-String orientation
  	-Double prix
  	-Date vente
  	-ArrayList<Date> dispo
  	+BienImmo(int numV, String adresseV, String orientationV, Double prixV, Date venteV)
  	+Double correspondance(Envie envie)
  	+void addDispo(Date dispoV)
  }

  BienImmo "*"-left-* Agence : "listeBien"
  Mandat -up->"1" BienImmo : "bien"
  Promesse -up->"1" BienImmo : "bien"

  class Terrain {
  	-Double surfaceSol
  	-Double longueurFacade
  	+Terrain(int numV, String adresseV, String orientationV, Double prixV, Date venteV, Double surfaceSolV, Double longueurFacadeV)
  	+Double correspondance(Envie envie)
  }

  class Maison {
  	-Double surfaceHabitable
  	-int nbPieces
  	-int nbEtages
  	-String chauffage
  	+Maison(int numV, String adresseV, String orientationV, Double prixV, Date venteV, Double surfaceHabitableV, int nbPiecesV, int nbEtagesV, String chauffageV)
  	+Double correspondance(Envie envie)
  }

  class Appartement {
  	-int nbPieces
  	-int etage
  	-Double chargesMensuelles
  	+Appartement(int numV, String adresseV, String orientationV, Double prixV, Date venteV, int nbPiecesV, int etageV, Double chargesMensuellesV)
  	+Double correspondance(Envie envie)
  }

  Appartement -up-|> BienImmo
  Maison -up-|> BienImmo
  Terrain -up-|> BienImmo

  Maison *-left-"1" Terrain : "terrain"

}

@enduml
